extensions/BugModal/web/bug_modal.css
/* ... */
.change-gravatar {
  padding: 0 8px 0 0 !important;
}

.change-gravatar .vcard {
  width: 36px;
  text-align: center;
}

.change-author {
  width: 100%;
  vertical-align: middle;
}

.change-author .vcard {
  display: inline;
}

.change-authors {
  font-weight: bold;
  padding-right: 8px;
}

.change-author .user-role {
  margin-left: 1em;
  border: 1px solid var(--positive-message-foreground-color);
  border-radius: 4px;
  padding: 1px 4px;
  color: var(--positive-message-foreground-color);
  font-size: var(--font-size-x-small);
}

.change-name,
.change-time {
  display: inline;
  color: var(--secondary-label-color);
  font-size: var(--font-size-small);
}

h3.change-name {
  font-weight: normal;
}

h3.change-name a {
  color: inherit;
}

/* Hide the comment in the textarea that overlaps with the placeholder */
#comment[hidden] {
  display: block;
  color: transparent;
  pointer-events: none;
  -webkit-user-select: none;
  user-select: none;
}

.comment-private {
  display: inline-block;
  margin: 0 8px;
}

.comment-actions > [role="group"] {
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.comment-actions .tag-btn .icon::before {
  content: '\E54E';
}

.comment-actions .reply-btn .icon::before {
  content: '\E15E';
}

.comment-actions .change-spinner[aria-expanded="true"] .icon::before {
  content: '\E15B';
}

.comment-actions .change-spinner[aria-expanded="false"] .icon::before {
  content: '\E145';
}

.comment-tags {
  padding: 0 !important;
}

.comment-tag {
  display: inline-block;
  margin: 4px 2px 0 0;
  border-radius: 4px;
  border: 1px solid var(--secondary-control-border-color);
  padding: 2px 6px 2px 4px;
  background-color: var(--control-background-color);
  font-size: var(--font-size-small);
}

.comment-tag a.remove {
  padding-right: 4px;
  cursor: pointer;
}

.comment-tags .remove[role="button"],
.comment-tags .close-btn {
  font-size: 1.8em;
  line-height: .7em;
  vertical-align: top;
}

a.comment-tag-url {
  cursor: help;
}

#ctag {
  margin-bottom: 4px;
}

#ctag button {
  margin-top: 2px;
}

#ctag a {
  margin-left: 8px;
}

#ctag-error {
  margin-top: 2px;
  border-radius: 2px;
  padding-left: 5px;
  color: var(--error-message-foreground-color);
}

.comment-collapse-reason {
  padding: 5px 7px !important;
  width: 100%;
}

.default-collapsed {
  color: var(--tertiary-label-color);
  background: inherit;
}

.default-collapsed .comment-actions {
  padding: 2px;
}

.private-comment {
  color: var(--error-message-foreground-color);
}

.change + .activity {
  border-top: 0;
}

.activity {
  padding: 8px;
  border-top: 1px solid var(--primary-region-border-color);
  color: var(--secondary-label-color);
  background: var(--primary-region-header-background-color);
  line-height: var(--line-height-comfortable);
}

.activity-deleted {
  text-decoration: line-through;
}

/**
 * inline attachments
 */

.change-set .attachment {
  padding: 12px;
  background-color: var(--primary-text-background-color);
}

.change-set .attachment .label {
  font-style: italic;
  color: var(--secondary-label-color);
}

.change-set .attachment .label [itemprop="description"] {
  font-weight: bold;
}

.change-set .attachment.deleted .label [itemprop="description"],
.change-set .attachment.obsolete .label [itemprop="description"] {
  text-decoration: line-through;
}

.change-set .attachment .outer {
  display: inline-block;
  overflow: hidden;
  margin: 8px 0 0;
  border: 1px solid var(--control-border-color);
  border-radius: 4px;
  color: var(--primary-label-color);
  vertical-align: top;
  text-decoration: none;
}

.change-set .attachment .outer:empty {
  width: 426px;
  height: 240px;
}

.change-set .attachment button.outer {
  padding: 0 !important;
  box-shadow: none;
  font-weight: normal;
  transition: none;
}

.change-set .attachment .lightbox {
  cursor: zoom-in;
}

.change-set .attachment .lightbox * {
  pointer-events: none;
}

.change-set .attachment img,
.change-set .attachment audio,
.change-set .attachment video {
  margin: 0;
  max-width: 426px;
  vertical-align: top;
}

.change-set .attachment pre {
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  margin: 0;
  padding: 8px;
  width: 426px;
  height: 240px;
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  pointer-events: none;
}

.change-set .attachment pre::after {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(to bottom, transparent 50%, var(--secondary-control-border-color));
  content: '';
}

.change-set .attachment pre .token {
  background-color: transparent !important; /* Override Prism.js */
}

.change-set .attachment ~ .comment-text {
  padding-top: 0;
}

.change-set .attachment ~ .comment-text:empty {
  padding-bottom: 0;
}

/**
 * comment reactions
 */

.comment-reactions {
  display: flex;
  gap: 4px;
  position: relative;
  padding: 0 12px 12px;
  background: var(--primary-text-background-color);
}

.comment-text.bz_private + .comment-reactions {
  padding: 12px;
}

.comment-reactions .emoji {
  font-size: 14px;
  font-family: Emoji;
}

.comment-reactions .anchor,
.comment-reactions .sums button {
  display: flex;
  gap: 4px;
  justify-content: center;
  align-items: center;
  border-radius: 16px;
  padding: 0 6px !important;
  min-width: 24px;
  height: 24px;
  font-size: 12px;
}

.comment-reactions button:disabled {
  color: var(--secondary-button-foreground-color) !important;
}

.comment-reactions button[aria-pressed="true"] {
  background-color: var(--selected-text-background-color) !important;
}

.comment-reactions button[hidden] {
  display: none;
}

.comment-reactions .anchor {
  padding: 0 !important;
  width: 24px;
}

.comment-reactions .anchor .icon::before {
  font-size: var(--icon-size-small);
  font-family: var(--icon-font-family);
  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
  vertical-align: middle;
  content: '\e813';
}
/* ... */

